--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
     </header>
     <main>
       <section id="sec-our-services">
-        <h1><br />EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługę</button>
+        <div class="services-head">
+          <h1><br />EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
+          <button type="button">Zamów usługę</button>
+        </div>
         <ul>
           <li>Lorem, ipsum</li>
           <li>
