--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,13 @@
     <meta name="author" content="Paweł Dominiak" />
     <title>Portfolio - Zadanie domowe studentów #2</title>
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -67,11 +74,15 @@
     </header>
     <main>
       <div class="btns">
-        <button type="button" class="filter-btn">Wszystkie</button>
+        <button type="button" class="filter-btn remove-margin-l">
+          Wszystkie
+        </button>
         <button type="button" class="filter-btn">Strony</button>
         <button type="button" class="filter-btn">Aplikacje</button>
         <button type="button" class="filter-btn">Dizajn</button>
-        <button type="button" class="filter-btn">Marketing</button>
+        <button type="button" class="filter-btn remove-margin-p">
+          Marketing
+        </button>
       </div>
       <div id="sec-portfolio" class="portfolio">
         <figure class="figure-column">
