--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <meta name="author" content="Paweł Dominiak" />
     <title>Strona główna - Zadanie domowe studentów #3</title>
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -183,7 +190,7 @@
         </figure>
       </section>
     </main>
-    <footer class="footer">
+    <footer>
       <p class="logo">
         <a class="link-no-decoration" href="#sec-header">
           <span class="logo-web">Web</span
