--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <span class="logo-web">Web</span>Studio
             </a>
             <ul class="links">
-              <li><a href="#" class="link">Agencja</a></li>
+              <li><a href="./index.html" class="link">Agencja</a></li>
               <li><a href="./portfolio.html" class="link">Portfolio</a></li>
               <li><a href="#" class="link">Kontakt</a></li>
             </ul>
