--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
         </div>
 
         <div id="sec-portfolio" class="portfolio-projects">
-          <figure class="project-figure">
+          <figure class="project-figure" tabindex="0">
             <img
               class="img-item"
               src="./images/project-1.jpg"
@@ -78,7 +78,7 @@
               <p class="pharagraf">Strona internetowa</p>
             </figcaption>
           </figure>
-          <figure class="project-figure">
+          <figure class="project-figure" tabindex="0">
             <img
               class="img-item"
               src="./images/project-2.jpg"
@@ -91,7 +91,7 @@
               <p class="pharagraf">Dizajn</p>
             </figcaption>
           </figure>
-          <figure class="project-figure">
+          <figure class="project-figure" tabindex="0">
             <img
               class="img-item"
               src="./images/project-3.jpg"
@@ -104,7 +104,7 @@
               <p class="pharagraf">Aplikacja</p>
             </figcaption>
           </figure>
-          <figure class="project-figure">
+          <figure class="project-figure" tabindex="0">
             <img
               class="img-item"
               src="./images/project-4.jpg"
@@ -117,7 +117,7 @@
               <p class="pharagraf">Marketing</p>
             </figcaption>
           </figure>
-          <figure class="project-figure">
+          <figure class="project-figure" tabindex="0">
             <img
               class="img-item"
               src="./images/project-5.jpg"
@@ -130,7 +130,7 @@
               <p class="pharagraf">Aplikacja</p>
             </figcaption>
           </figure>
-          <figure class="project-figure">
+          <figure class="project-figure" tabindex="0">
             <img
               class="img-item"
               src="./images/project-6.jpg"
@@ -143,7 +143,7 @@
               <p class="pharagraf">Strona internetowa</p>
             </figcaption>
           </figure>
-          <figure class="project-figure">
+          <figure class="project-figure" tabindex="0">
             <img
               class="img-item"
               src="./images/project-7.jpg"
@@ -156,7 +156,7 @@
               <p class="pharagraf">Dizajn</p>
             </figcaption>
           </figure>
-          <figure class="project-figure">
+          <figure class="project-figure" tabindex="0">
             <img
               class="img-item"
               src="./images/project-8.jpg"
@@ -169,7 +169,7 @@
               <p class="pharagraf">Marketing</p>
             </figcaption>
           </figure>
-          <figure class="project-figure">
+          <figure class="project-figure" tabindex="0">
             <img
               class="img-item"
               src="./images/project-9.jpg"
